--- a/faq_en.html
+++ b/faq_en.html
@@ -10,27 +10,27 @@
 <body> 
   <header> 
     <div class="container"> 
-      <div class="row-display-nowrap"><a href="index.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
+      <div class="row-display-nowrap"><a href="index_en.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
         <div class="topcomposing">
           <div class="language">
             <ul> 
-              <li> <a href="index.html">繁體中文</a></li>
+              <li> <a href="faq.html">繁體中文</a></li>
               <li> <a href="index.html">日本語</a></li>
-              <li> <a href="index.html">English</a></li>
+              <li> <a href="faq_en.html">English</a></li>
             </ul>
           </div>
           <nav> 
             <ul> 
-              <li><a href="about_us.html">關於我們</a></li>
-              <li><a href="javascript:;">產品介紹</a>
+              <li><a href="about_us_en.html">About us</a></li>
+              <li><a href="javascript:;">Product</a>
                 <ul class="submenu">
-                  <li> <a href="product1.html">冷氣清洗槽</a></li>
-                  <li> <a href="product2.html">手工具</a></li>
-                  <li> <a href="product3.html">零件</a></li>
+                  <li> <a href="product1_en.html">A/C Cleaning tank</a></li>
+                  <li> <a href="product2_en.html">Tools</a></li>
+                  <li> <a href="product3_en.html">Parts</a></li>
                 </ul>
               </li>
-              <li><a href="client.html">客戶回饋</a></li>
-              <li><a href="faq.html">常見問題</a></li>
+              <li><a href="client_en.html">Client</a></li>
+              <li><a href="faq_en.html">Question</a></li>
             </ul>
           </nav>
         </div>
@@ -40,34 +40,34 @@
   <div class="banner"> <img class="img-fluid" src="public/images/product8.png" alt=""/></div>
   <section>
     <div class="breadcrumb"> 
-      <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="faq.html">常見問題 </a></div>
+      <div class="container"><a href="index_en.html">Front</a><span>&nbsp; &gt; &nbsp;</span><a href="faq_en.html">Question </a></div>
     </div>
     <div class="container-faq">
       <div class="question-container">
         <div class="question"> 
-          <h3>如何購買</h3>
+          <h3>How to buy</h3>
           <div class="icon-arrow"> <i class="fa-solid fa-angle-down"></i></div>
         </div>
         <div class="answer"> 
-          <p>全台冷氣冷材行都有銷售通路，網路電商也有可以購買的賣場喔!</p>
+          <p>There are sales channels in all air-conditioning and cooling material stores in Taiwan. There are also stores where you can buy them on the Internet!</p>
         </div>
       </div>
       <div class="question-container">
         <div class="question"> 
-          <h3>部分零件壞了怎麼辦</h3>
+          <h3>What should I do if some parts are broken</h3>
           <div class="icon-arrow"> <i class="fa-solid fa-angle-down"></i></div>
         </div>
         <div class="answer"> 
-          <p>可以聯絡原本購買的店家，需要更換什麼店主就會幫你們叫貨喔!</p>
+          <p>Contact the store where you originally purchased, if you need to change what shop owner will help you order goods!</p>
         </div>
       </div>
       <div class="question-container">
         <div class="question"> 
-          <h3>我是經銷商，請問進貨的管道是？</h3>
+          <h3>I'm a dealer, what is the pipeline for the purchase</h3>
           <div class="icon-arrow"> <i class="fa-solid fa-angle-down"></i></div>
         </div>
         <div class="answer"> 
-          <p>歡迎撥打頁尾的連絡電話，也可以傳真或是加LINE喔!</p>
+          <p>You can get in touch via the email address at the bottom of the page!</p>
         </div>
       </div>
     </div>
