--- a/index_en.html
+++ b/index_en.html
@@ -9,7 +9,7 @@
 <body> 
   <header> 
     <div class="container"> 
-      <div class="row-display-nowrap"><a href="index.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
+      <div class="row-display-nowrap"><a href="index_en.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
         <div class="topcomposing">
           <div class="language">
             <ul> 
@@ -20,16 +20,16 @@
           </div>
           <nav> 
             <ul> 
-              <li><a href="about_us.html">關於我們</a></li>
-              <li><a href="javascript:;">產品介紹</a>
+              <li><a href="about_us_en.html">About us</a></li>
+              <li><a href="javascript:;">Product</a>
                 <ul class="submenu">
-                  <li> <a href="product1.html">冷氣清洗槽</a></li>
-                  <li> <a href="product2.html">手工具</a></li>
-                  <li> <a href="product3.html">零件</a></li>
+                  <li> <a href="product1_en.html"> A/C Cleaning tank</a></li>
+                  <li> <a href="product2_en.html">Tools</a></li>
+                  <li> <a href="product3_en.html">Parts</a></li>
                 </ul>
               </li>
-              <li><a href="client.html">客戶回饋</a></li>
-              <li><a href="faq.html">常見問題</a></li>
+              <li><a href="client_en.html">Client</a></li>
+              <li><a href="faq_en.html">Question</a></li>
             </ul>
           </nav>
         </div>
@@ -39,22 +39,22 @@
   <div class="banner"> <img class="img-fluid" src="public/images/product8.png" alt=""/></div>
   <div class="S1">
     <div class="container">
-      <h2>最新消息</h2>
+      <h2>Latest News</h2>
       <ul class="newspost"> 
         <li> 
           <div class="date">2022-11-01</div>
-          <div class="product1">產品資訊</div>
-          <div class="news"> <a href="product2_3.html">裝修最強助手-大力活動扳手即將推出,各位師傅們不要錯過喔!</a></div>
+          <div class="product1">Product</div>
+          <div class="news"> <a href="product2_3_en.html">The enovation best assistant ,Adjustable wrench with strong forceps coming soon.</a></div>
         </li>
         <li> 
           <div class="date">2022-11-01</div>
-          <div class="product1">產品資訊</div>
-          <div class="news"> <a href="product2_4.html">螺絲小幫手-真豪吸上市囉!</a></div>
+          <div class="product1">Product</div>
+          <div class="news"> <a href="product2_4_en.html">Magnet Key Rings start selling!</a></div>
         </li>
         <li> 
           <div class="date">2022-11-01</div>
-          <div class="product1">產品資訊</div>
-          <div class="news">四方吹清洗槽即將上市,請各位多多關注官方資訊!</div>
+          <div class="product1">Product</div>
+          <div class="news">Cassette type air-conditioner cleaning tank coming soon!</div>
         </li>
       </ul><img class="logo2-1" src="public/images/LOGO2.png" alt=""/>
     </div>
@@ -63,10 +63,11 @@
     <div class="container row">
       <div class="left col-12"><img class="img-fluid" src="public/images/product6.png" alt=""/></div>
       <div class="right col-12">
-        <h2> <a href="product1_1.html">真豪洗冷氣清洗槽</a></h2>
-        <p>革命性產品</p>
-        <p>完全解決溢水的困擾</p>
-        <p>組裝快速省去繁雜工時</p>
+        <h2> <a href="product1_1_en.html">EasyWash</a></h2>
+        <p>Air-conditioning cleaning tank</p>
+        <p>Revolutionary Product</p>
+        <p>Completely solve the problem of overflow</p>
+        <p>Quick and easy assembly to save time and labor</p>
       </div>
     </div>
   </div>
@@ -74,11 +75,11 @@
     <div class="container row"> 
       <div class="left col-12"><img class="img-fluid" src="public/images/knife2.png" alt=""/><img class="logo2-2" src="public/images/LOGO2.png" alt=""/></div>
       <div class="right col-12 order-md-1">
-        <h2> <a href="product2_1.html">真豪修邊刀</a></h2>
-        <p>方便攜帶</p>
-        <p>好操作</p>
-        <p>耐用</p>
-        <p>刀頭更換快速</p>
+        <h2> <a href="product2_1_en.html">Easy Trimming</a></h2>
+        <p>Portable</p>
+        <p>Durable</p>
+        <p>Easy to operate</p>
+        <p>Quick cutter head replacement</p>
       </div>
     </div>
   </div>
