--- a/about_us_en.html
+++ b/about_us_en.html
@@ -9,7 +9,7 @@
 <body> 
   <header> 
     <div class="container"> 
-      <div class="row-display-nowrap"><a href="index.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
+      <div class="row-display-nowrap"><a href="index_en.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
         <div class="topcomposing">
           <div class="language">
             <ul> 
@@ -20,16 +20,16 @@
           </div>
           <nav> 
             <ul> 
-              <li><a href="about_us.html">關於我們</a></li>
-              <li><a href="javascript:;">產品介紹</a>
+              <li><a href="about_us_en.html">About us</a></li>
+              <li><a href="javascript:;">Product</a>
                 <ul class="submenu">
-                  <li> <a href="product1.html">冷氣清洗槽</a></li>
-                  <li> <a href="product2.html">手工具</a></li>
-                  <li> <a href="product3.html">零件</a></li>
+                  <li> <a href="product1_en.html">A/C Cleaning tank</a></li>
+                  <li> <a href="product2_en.html">Tools</a></li>
+                  <li> <a href="product3_en.html">Parts</a></li>
                 </ul>
               </li>
-              <li><a href="client.html">客戶回饋</a></li>
-              <li><a href="faq.html">常見問題</a></li>
+              <li><a href="client_en.html">Client</a></li>
+              <li><a href="faq_en.html">Question</a></li>
             </ul>
           </nav>
         </div>
@@ -39,22 +39,22 @@
   <div class="banner"> <img class="img-fluid" src="public/images/product8.png" alt=""/></div>
   <section>
     <div class="breadcrumb"> 
-      <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="about_us.html">關於我們 </a></div>
+      <div class="container"><a href="index_en.html">Front</a><span>&nbsp; &gt; &nbsp;</span><a href="about_us_en.html">About us </a></div>
     </div>
     <div class="about1 container row">
-      <p>　　天氣越來越炎熱，對冷氣的需求也逐漸增加，而為了讓冷氣使用起來乾淨又涼<br/> 爽，適時的清洗冷氣是必要的。我們致力於推出冷氣空調相關的產品，能用更輕鬆的 <br/> 方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。</p>
-      <P>　　我們每項產品的零件都是朝著輕巧、耐用、組裝簡單的方向去研發，為的就是讓<br/> 我們的產品成為人人都能輕鬆上手的好工具！</P>
-      <p>　　選擇真豪洗，選擇最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！</p>
+      <p>　　The weather is getting hotter, and the demand for air-conditioning is also gradually increasing. In order to make the<br/> air conditioner clean and cool.It is necessary to clean the air conditioner in a timely manner. We are committed <br/>to launching air-conditioning related products. Maintain and clean air conditioners in an easier way to enjoy the <br/>clean and comfortable air-conditioning in this hot summer.</p>
+      <P>　　The parts of each of our products are developed in the direction of being lightweight, durable and easy to <br/>assemble. The purpose is to make our products a good tool that everyone can use easily!</P>
+      <p>　　Choose us, choose the easiest and most convenient way to clean the air conditioner, and bring <br/>the most comfortable environment to your family!</p>
     </div>
     <div class="about2 container row"> 
       <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/about1.png" alt=""/>
-        <h3>主體架</h3>
+        <h3>Main Frame</h3>
       </div>
       <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/about2.png" alt=""/>
-        <h3>集水袋</h3>
+        <h3>Water Collection Bag</h3>
       </div>
       <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/about3.png" alt=""/>
-        <h3>外提袋</h3>
+        <h3>Outside Carrier Bag</h3>
       </div>
     </div>
   </section>
