--- a/product2_1_en.html
+++ b/product2_1_en.html
@@ -9,7 +9,7 @@
 <body> 
   <header> 
     <div class="container"> 
-      <div class="row-display-nowrap"><a href="index.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
+      <div class="row-display-nowrap"><a href="index_en.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
         <div class="topcomposing">
           <div class="language">
             <ul> 
@@ -20,16 +20,16 @@
           </div>
           <nav> 
             <ul> 
-              <li><a href="about_us.html">關於我們</a></li>
-              <li><a href="javascript:;">產品介紹</a>
+              <li><a href="about_us_en.html">About us</a></li>
+              <li><a href="javascript:;">Product</a>
                 <ul class="submenu">
-                  <li> <a href="product1.html">冷氣清洗槽</a></li>
-                  <li> <a href="product2.html">手工具</a></li>
-                  <li> <a href="product3.html">零件</a></li>
+                  <li> <a href="product1_en.html">A/C Cleaning tank</a></li>
+                  <li> <a href="product2_en.html">Tools</a></li>
+                  <li> <a href="product3_en.html">Parts</a></li>
                 </ul>
               </li>
-              <li><a href="client.html">客戶回饋</a></li>
-              <li><a href="faq.html">常見問題</a></li>
+              <li><a href="client_en.html">Client</a></li>
+              <li><a href="faq_en.html">Question</a></li>
             </ul>
           </nav>
         </div>
@@ -39,28 +39,27 @@
   <div class="banner"> <img class="img-fluid" src="public/images/product8.png" alt=""/></div>
   <section>
     <div class="breadcrumb"> 
-      <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="product1.html">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product2.html">手工具</a><span>&nbsp; &gt; &nbsp;</span><a href="product2_1.html">真豪修邊刀</a></div>
+      <div class="container"><a href="index_en.html">Front</a><span>&nbsp; &gt; &nbsp;</span><a href="product1_en.html">Product</a><span>&nbsp; &gt; &nbsp;</span><a href="product2_en.html">Tools</a><span>&nbsp; &gt; &nbsp;</span><a href="product2_1_en.html">Easy Trimming</a></div>
     </div>
     <div class="container">
       <div class="product-left col-12 col-md-9">
         <dl> 
-          <dt> <a href="product2_1.html">真豪修邊刀</a></dt>
-          <dt> <a href="product2_2.html">六角軸修邊刀頭</a></dt>
-          <dt> <a href="product2_3.html">大力活動扳手</a></dt>
-          <dt> <a href="product2_4.html">螺絲小幫手</a></dt>
+          <dt> <a href="product2_1_en.html">Easy Trimming</a></dt>
+          <dt> <a href="product2_2_en.html">Electric trimming cutter head</a></dt>
+          <dt> <a href="product2_3_en.html">Adjustable wrench with strong forceps</a></dt>
+          <dt> <a href="product2_4_en.html">Magnet Key Ring</a></dt>
         </dl>
       </div>
       <div class="product-right">
         <div class="row"> 
           <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/pd2-1-1.png" alt=""/></div>
           <div class="col-md-6 col-12">
-            <h2>真豪修邊刀</h2>
-            <p>適用銅管尺寸2~5分</p>
-            <p>也適用於1~16mm</p>
-            <p>刀頭外層鍍鈦，不易生鏽</p>
-            <p>輕輕一按就能替換刀頭</p>
-            <p>購買還有附贈小刀片可以使用</p>
-            <p>刀頭可以另外單一購買</p>
+            <h2>Easy Trimming</h2>
+            <p>Applicable copper tube size 1~16mm</p>
+            <p>The outer layer of the cutter head is titanium-plated, which is not easy to rust</p>
+            <p>Replace the cutter head with a single touch</p>
+            <p>The purchase also comes with a small blade that can be used</p>
+            <p>Titanium-plated cutter heads can be purchased separately</p>
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-1-2.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-1-3.png" alt=""/></div>
