--- a/product2_3_en.html
+++ b/product2_3_en.html
@@ -9,7 +9,7 @@
 <body> 
   <header> 
     <div class="container"> 
-      <div class="row-display-nowrap"><a href="index.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
+      <div class="row-display-nowrap"><a href="index_en.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
         <div class="topcomposing">
           <div class="language">
             <ul> 
@@ -20,16 +20,16 @@
           </div>
           <nav> 
             <ul> 
-              <li><a href="about_us.html">關於我們</a></li>
-              <li><a href="javascript:;">產品介紹</a>
+              <li><a href="about_us_en.html">About us</a></li>
+              <li><a href="javascript:;">Product</a>
                 <ul class="submenu">
-                  <li> <a href="product1.html">冷氣清洗槽</a></li>
-                  <li> <a href="product2.html">手工具</a></li>
-                  <li> <a href="product3.html">零件</a></li>
+                  <li> <a href="product1_en.html">A/C Cleaning tank</a></li>
+                  <li> <a href="product2_en.html">Tools</a></li>
+                  <li> <a href="product3_en.html">Parts</a></li>
                 </ul>
               </li>
-              <li><a href="client.html">客戶回饋</a></li>
-              <li><a href="faq.html">常見問題</a></li>
+              <li><a href="client_en.html">Client</a></li>
+              <li><a href="faq_en.html">Question</a></li>
             </ul>
           </nav>
         </div>
@@ -39,27 +39,27 @@
   <div class="banner"> <img class="img-fluid" src="public/images/product8.png" alt=""/></div>
   <section>
     <div class="breadcrumb"> 
-      <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="product1.html">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product2.html">手工具</a><span>&nbsp; &gt; &nbsp;</span><a href="product2_3.html">大力活動扳手</a></div>
+      <div class="container"><a href="index_en.html">Front</a><span>&nbsp; &gt; &nbsp;</span><a href="product1_en.html">Product</a><span>&nbsp; &gt; &nbsp;</span><a href="product2_en.html">Tools</a><span>&nbsp; &gt; &nbsp;</span><a href="product2_3_en.html">Adjustable wrench with strong forceps</a></div>
     </div>
     <div class="container">
       <div class="product-left col-12 col-md-9">
         <dl> 
-          <dt> <a href="product2_1.html">真豪修邊刀</a></dt>
-          <dt> <a href="product2_2.html">六角軸修邊刀頭</a></dt>
-          <dt> <a href="product2_3.html">大力活動扳手</a></dt>
-          <dt> <a href="product2_4.html">螺絲小幫手</a></dt>
+          <dt> <a href="product2_1_en.html">Easy Trimming</a></dt>
+          <dt> <a href="product2_2_en.html">Electric trimming cutter head</a></dt>
+          <dt> <a href="product2_3_en.html">Adjustable wrench with strong forceps</a></dt>
+          <dt> <a href="product2_4_en.html">Magnet Key Ring</a></dt>
         </dl>
       </div>
       <div class="product-right">
         <div class="row"> 
           <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/pd2-3-1.png" alt=""/></div>
           <div class="col-md-6 col-12">
-            <h2>大力活動扳手</h2>
-            <p>防滑齒輪設計，夾持牢固</p>
-            <p>刻度指示提高工作效率</p>
-            <p>開口與調整螺母滑動順暢</p>
-            <p>大力鎖緊構造安全</p>
-            <p>防滑樹脂握把</p>
+            <h2>Adjustable wrench with strong forceps</h2>
+            <p>Anti-slip gear design for clamp firmly</p>
+            <p>Scale indication increases work efficiency</p>
+            <p>Opening and adjusting nut slide smoothly</p>
+            <p>Strong locking construction for safety</p>
+            <p>Non-slip resin grip</p>
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-3-2.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-3-3.png" alt=""/></div>
