--- a/product2_en.html
+++ b/product2_en.html
@@ -9,7 +9,7 @@
 <body> 
   <header> 
     <div class="container"> 
-      <div class="row-display-nowrap"><a href="index.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
+      <div class="row-display-nowrap"><a href="index_en.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
         <div class="topcomposing">
           <div class="language">
             <ul> 
@@ -20,16 +20,16 @@
           </div>
           <nav> 
             <ul> 
-              <li><a href="about_us.html">關於我們</a></li>
-              <li><a href="javascript:;">產品介紹</a>
+              <li><a href="about_us_en.html">About us</a></li>
+              <li><a href="javascript:;">Product</a>
                 <ul class="submenu">
-                  <li> <a href="product1.html">冷氣清洗槽</a></li>
-                  <li> <a href="product2.html">手工具</a></li>
-                  <li> <a href="product3.html">零件</a></li>
+                  <li> <a href="product1_en.html">A/C Cleaning tank</a></li>
+                  <li> <a href="product2_en.html">Tools</a></li>
+                  <li> <a href="product3_en.html">Parts</a></li>
                 </ul>
               </li>
-              <li><a href="client.html">客戶回饋</a></li>
-              <li><a href="faq.html">常見問題</a></li>
+              <li><a href="client_en.html">Client</a></li>
+              <li><a href="faq_en.html">Question</a></li>
             </ul>
           </nav>
         </div>
@@ -39,30 +39,30 @@
   <div class="banner"> <img class="img-fluid" src="public/images/product8.png" alt=""/></div>
   <section>
     <div class="breadcrumb"> 
-      <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="product1.html">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product2.html">手工具</a></div>
+      <div class="container"><a href="index_en.html">Front</a><span>&nbsp; &gt; &nbsp;</span><a href="product1_en.html">Product</a><span>&nbsp; &gt; &nbsp;</span><a href="product2_en.html">Tools</a></div>
     </div>
     <div class="container">
       <div class="product-left col-12 col-md-9">
         <dl> 
-          <dt> <a href="product1.html">冷氣清洗槽</a></dt>
-          <dt> <a href="product2.html">手工具</a></dt>
-          <dt> <a href="product3.html">零件</a></dt>
+          <dt> <a href="product1_en.html">A/C Cleaning tank</a></dt>
+          <dt> <a href="product2_en.html">Tools</a></dt>
+          <dt> <a href="product3_en.html">Parts</a></dt>
         </dl>
       </div>
       <div class="product-right">
         <div class="row"> 
-          <div class="col-md-6 col-12"> <a href="product2_1.html"> 
+          <div class="col-md-6 col-12"> <a href="product2_1_en.html"> 
               <div class="img-big"><img class="img-fluid" src="public/images/pd2-1.png" alt=""/></div>
-              <h3>真豪修邊刀</h3></a></div>
-          <div class="col-md-6 col-12"> <a href="product2_2.html"> 
+              <h3>Easy Trimming</h3></a></div>
+          <div class="col-md-6 col-12"> <a href="product2_2_en.html"> 
               <div class="img-big"><img class="img-fluid" src="public/images/pd2-2.png" alt=""/></div>
-              <h3>六角軸修邊刀頭</h3></a></div>
-          <div class="col-md-6 col-12"> <a href="product2_3.html"> 
+              <h3>Electric trimming cutter head</h3></a></div>
+          <div class="col-md-6 col-12"> <a href="product2_3_en.html"> 
               <div class="img-big"><img class="img-fluid" src="public/images/pd2-3.png" alt=""/></div>
-              <h3>大力活動扳手</h3></a></div>
-          <div class="col-md-6 col-12"> <a href="product2_4.html"> 
+              <h3>Adjustable wrench with strong forceps</h3></a></div>
+          <div class="col-md-6 col-12"> <a href="product2_4_en.html"> 
               <div class="img-big"><img class="img-fluid" src="public/images/pd2-4.png" alt=""/></div>
-              <h3>螺絲小幫手</h3></a></div>
+              <h3>Magnet Key Ring</h3></a></div>
         </div>
       </div>
     </div>
