--- a/product3_en.html
+++ b/product3_en.html
@@ -9,7 +9,7 @@
 <body> 
   <header> 
     <div class="container"> 
-      <div class="row-display-nowrap"><a href="index.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
+      <div class="row-display-nowrap"><a href="index_en.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
         <div class="topcomposing">
           <div class="language">
             <ul> 
@@ -20,16 +20,16 @@
           </div>
           <nav> 
             <ul> 
-              <li><a href="about_us.html">關於我們</a></li>
-              <li><a href="javascript:;">產品介紹</a>
+              <li><a href="about_us_en.html">About us</a></li>
+              <li><a href="javascript:;">Product</a>
                 <ul class="submenu">
-                  <li> <a href="product1.html">冷氣清洗槽</a></li>
-                  <li> <a href="product2.html">手工具</a></li>
-                  <li> <a href="product3.html">零件</a></li>
+                  <li> <a href="product1_en.html">A/C Cleaning tank</a></li>
+                  <li> <a href="product2_en.html">Tools</a></li>
+                  <li> <a href="product3_en.html">Parts</a></li>
                 </ul>
               </li>
-              <li><a href="client.html">客戶回饋</a></li>
-              <li><a href="faq.html">常見問題</a></li>
+              <li><a href="client_en.html">Client</a></li>
+              <li><a href="faq_en.html">Question</a></li>
             </ul>
           </nav>
         </div>
@@ -39,38 +39,38 @@
   <div class="banner"> <img class="img-fluid" src="public/images/product8.png" alt=""/></div>
   <section>
     <div class="breadcrumb"> 
-      <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="product1.html">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product3.html">零件</a></div>
+      <div class="container"><a href="index_en.html">Front</a><span>&nbsp; &gt; &nbsp;</span><a href="product1_en.html">Product</a><span>&nbsp; &gt; &nbsp;</span><a href="product3_en.html">Parts</a></div>
     </div>
     <div class="container">
       <div class="product-left col-12 col-md-9">
         <dl> 
-          <dt> <a href="product1.html">冷氣清洗槽</a></dt>
-          <dt> <a href="product2.html">手工具</a></dt>
-          <dt> <a href="product3.html">零件</a></dt>
+          <dt> <a href="product1_en.html">A/C Cleaning tank</a></dt>
+          <dt> <a href="product2_en.html">Tools</a></dt>
+          <dt> <a href="product3_en.html">Parts</a></dt>
         </dl>
       </div>
       <div class="product-right">
         <div class="row"> 
           <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/parts1.png" alt=""/>
-            <h3>調整轉軸</h3>
+            <h3>Adjust the shaft</h3>
           </div>
           <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/about2.png" alt=""/>
-            <h3>集水袋</h3>
+            <h3>Water collection bag</h3>
           </div>
           <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/parts3.png" alt=""/>
-            <h3>ㄇ型主體架</h3>
+            <h3>ㄇ main frame</h3>
           </div>
           <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/parts4.png" alt=""/>
-            <h3>中層U型架</h3>
+            <h3>Middle U-shaped frame</h3>
           </div>
           <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/parts5.png" alt=""/>
-            <h3>伸縮水管</h3>
+            <h3>Telescopic hose</h3>
           </div>
           <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/parts6.png" alt=""/>
-            <h3>上檔水板</h3>
+            <h3>Upper water board</h3>
           </div>
           <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/parts7.png" alt=""/>
-            <h3>加長桿</h3>
+            <h3>Extension rod</h3>
           </div>
         </div>
       </div>
