--- a/about_us_en.html
+++ b/about_us_en.html
@@ -41,7 +41,7 @@
       <div class="container"><a href="index_en.html">Front</a><span>&nbsp; &gt; &nbsp;</span><a href="about_us_en.html">About us </a></div>
     </div>
     <div class="about1 container row">
-      <p>　　The weather is getting hotter, and the demand for air-conditioning is also gradually increasing. In order to make the<br/> air conditioner clean and cool.It is necessary to clean the air conditioner in a timely manner. We are committed <br/>to launching air-conditioning related products. Maintain and clean air conditioners in an easier way to enjoy the <br/>clean and comfortable air-conditioning in this hot summer.</p>
+      <p>　　The weather is getting hotter, and the demand for air-conditioning is also gradually increasing. In order to make the<br/> air-conditioner clean and cool.It is necessary to clean the air-conditioner in a timely manner. We are committed <br/>to research and development air-conditioning related products. Maintain and clean air-conditioners in an easier way to <br/>enjoy the clean and comfortable air-conditioning in this hot summer.</p>
       <P>　　The parts of each of our products are developed in the direction of being lightweight, durable and easy to <br/>assemble. The purpose is to make our products a good tool that everyone can use easily!</P>
       <p>　　Choose us, choose the easiest and most convenient way to clean the air conditioner, and bring <br/>the most comfortable environment to your family!</p>
     </div>
