--- a/faq.html
+++ b/faq.html
@@ -14,8 +14,8 @@
         <div class="topcomposing">
           <div class="language">
             <ul> 
-              <li> <a href="index.html">繁體中文</a></li>
-              <li> <a href="index.html">English</a></li>
+              <li> <a href="faq.html">繁體中文</a></li>
+              <li> <a href="faq_en.html">English</a></li>
             </ul>
           </div>
           <nav> 
