--- a/product1_2_en.html
+++ b/product1_2_en.html
@@ -52,12 +52,12 @@
         <div class="row"> 
           <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/pd1-2-1.png" alt=""/></div>
           <div class="col-md-6 col-12">
-            <h2>EasyWash(large) A/C Cleaning tank</h2>
-            <p>Applicable Sizes:95~160CM</p>
-            <p>Also suitable for EasyWash size</p>
-            <p>Use the same way as EasyWash</p>
-            <p>Large size come with extension rods</p>
-            <p>The upper and lower heights can be further expanded by 6 cm</p><a href="https://youtu.be/PGiqnDiTnaI" target="_blank">Instructional Video</a>
+            <h2>EasyWash(large) A/C Cleaning tank.</h2>
+            <p>Applicable Sizes:95~160CM.</p>
+            <p>Also suitable for EasyWash size.</p>
+            <p>Use the same way as EasyWash.</p>
+            <p>Large size come with extension rods.</p>
+            <p>The upper and lower heights can be further expanded by 6 cm.</p><a href="https://youtu.be/PGiqnDiTnaI" target="_blank">Instructional Video</a>
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd1-2-2.png" alt=""/></div>
         </div>
