--- a/product1_1_en.html
+++ b/product1_1_en.html
@@ -53,13 +53,13 @@
           <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/pd1-1-1.png" alt=""/></div>
           <div class="col-md-6 col-12">
             <h2>EasyWash Air-conditioning cleaning tank</h2>
-            <p>Applicable Sizes:76~130CM</p>
-            <p>Lightweight and easy to carry</p>
-            <p>The outside carrier bag is large and easy to store</p>
-            <p>Both left and right outlet tubes can be easily used</p>
-            <p>Cleaning tank for easy adjustment of upper, middle and lower layers</p>
-            <p>Two-stage drainage pipe(not clogged with water )</p>
-            <p>Parts can be replaced individually</p><a href="https://youtu.be/PGiqnDiTnaI" target="_blank">Instructional Video</a>
+            <p>Applicable Sizes:76~130CM.</p>
+            <p>Lightweight and easy to carry.</p>
+            <p>The outside carrier bag is large and easy to store.</p>
+            <p>Both left and right outlet tubes can be easily used.</p>
+            <p>Cleaning tank for easy adjustment of upper, middle and lower layers.</p>
+            <p>Two-stage drainage pipe(not clogged with water ).</p>
+            <p>Parts can be replaced individually.</p><a href="https://youtu.be/PGiqnDiTnaI" target="_blank">Instructional Video</a>
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd1-1-2.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd1-1-3.png" alt=""/></div>
