--- a/product2_1_en.html
+++ b/product2_1_en.html
@@ -54,11 +54,11 @@
           <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/pd2-1-1.png" alt=""/></div>
           <div class="col-md-6 col-12">
             <h2>Easy Trimming</h2>
-            <p>Applicable copper tube size 1~16mm</p>
-            <p>The outer layer of the cutter head is titanium-plated, which is not easy to rust</p>
-            <p>Replace the cutter head with a single touch</p>
-            <p>The purchase also comes with a small blade that can be used</p>
-            <p>Titanium-plated cutter heads can be purchased separately</p>
+            <p>Applicable copper tube size 1~16mm.</p>
+            <p>The outer layer of the cutter head is titanium-plated, which is not easy to rust.</p>
+            <p>Replace the cutter head with a single touch.</p>
+            <p>The purchase also comes with a small blade that can be used.</p>
+            <p>Titanium-plated cutter heads can be purchased separately.</p>
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-1-2.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-1-3.png" alt=""/></div>
