--- a/product2_2_en.html
+++ b/product2_2_en.html
@@ -54,9 +54,9 @@
           <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/pd2-2-1.png" alt=""/></div>
           <div class="col-md-6 col-12">
             <h2>Electric trimming cutter head</h2>
-            <p>Applicable copper tube size 1~16mm</p>
-            <p>The outer layer of the cutter head is titanium-plated, which is not easy to rust</p>
-            <p>For electric drills</p>
+            <p>Applicable copper tube size 1~16mm.</p>
+            <p>The outer layer of the cutter head is titanium-plated, which is not easy to rust.</p>
+            <p>For electric drills.</p>
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-2-2.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-2-3.png" alt=""/></div>
