--- a/product2_3_en.html
+++ b/product2_3_en.html
@@ -54,11 +54,11 @@
           <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/pd2-3-1.png" alt=""/></div>
           <div class="col-md-6 col-12">
             <h2>Adjustable wrench with strong forceps</h2>
-            <p>Anti-slip gear design for clamp firmly</p>
-            <p>Scale indication increases work efficiency</p>
-            <p>Opening and adjusting nut slide smoothly</p>
-            <p>Strong locking construction for safety</p>
-            <p>Non-slip resin grip</p>
+            <p>Anti-slip gear design for clamp firmly.</p>
+            <p>Scale indication increases work efficiency.</p>
+            <p>Opening and adjusting nut slide smoothly.</p>
+            <p>Strong locking construction for safety.</p>
+            <p>Non-slip resin grip.</p>
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-3-2.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-3-3.png" alt=""/></div>
