--- a/product2_4_en.html
+++ b/product2_4_en.html
@@ -54,10 +54,10 @@
           <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/pd2-4-1.png" alt=""/></div>
           <div class="col-md-6 col-12">
             <h2>Magnet Key Rings</h2>
-            <p>Super strong suction, absorb a lot of screws without falling</p>
-            <p>Wear-resistant and cut-resistant, covered with genuine leather, not afraid of abrasion or cuts caused by screws</p>
-            <p>Key ring design, lightweight and convenient</p>
-            <p>Applicable to all walks of life, absorb all kinds of small parts</p>
+            <p>Super strong suction, absorb a lot of screws without falling.</p>
+            <p>Wear-resistant and cut-resistant, covered with genuine leather, not afraid of abrasion or cuts caused by screws.</p>
+            <p>Key ring design, lightweight and convenient.</p>
+            <p>Applicable to all walks of life, absorb all kinds of small parts.</p>
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-4-2.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-4-3.png" alt=""/></div>
